# InpxCreator

./: .gitignore  .set-project-env  CMakeLists.txt  LICENSE  README.md  build-release-linux.sh  build-release-win.sh  build-release.sh  build_release.sh  get-maria.sh  get-mysql-linux.sh  get-mysql-win.sh  get-mysql.sh  glide.yaml  prepare.cmd
bin64/: comment_flibusta_online.utf8  fb2_flibusta.cmd  fb2_flibusta.ps1  fb2_librusec.cmd  fb2_librusec.ps1  history.txt  libget2.conf  readme.txt
bin64/language/: errmsg.sys
boost/boost_1_44_0/: readme.txt
boost/boost_1_57_0/: readme.txt
cmake/: FindGlide.cmake  FindGo.cmake  FindGodep.cmake  FindIconv.cmake  FindMariaDB.cmake  FindMySQL.cmake  version.go.in  version.h.in  win32.toolchain  win64.toolchain
docker/: Dockerfile.build  bootstrap.sh  build.sh  container.ps1  container.txt  get-maria.sh  get-mysql.sh
docs/: mingw64-ubuntu.txt
expat-2.0.1/: expat.vcproj
expat-2.0.1/vstudio/vc10/: expat_vc10.vcxproj
expat-2.0.1/vstudio/vc9/: expat.vcproj
lib2inpx/: guid.cpp  lib2inpx.cpp  libsplit.cpp  main.cpp  precomp.cpp  precomp.h  util.cpp  util.h
libget/: args.fs  assemblyinfo.fs  config.fs  main.fs
libget2/: config.go  main.go  util.go
libget2/Godeps/: Godeps.json
libmerge/: main.go
libsplit/: main.cpp  precomp.cpp  precomp.h
libtools/: go.mod
libtools/cmd/libclean/: main.go
libtools/cmd/libget2/: config.go  main.go  util.go
libtools/cmd/libmerge/: main.go
libtools/internal/zip/: reader.go
minizip/: CMakeLists.txt  iowin32.c
misc/: comment_fb2.utf8  comment_usr.utf8  fb2_flibusta.ps1  libget2.conf  readme.md  readme.txt
mysql-5.1.42-win32/: readme.txt
mysql-5.1.42-win64/: readme.txt
mysql-5.1.51-win32/: readme.txt
mysql-5.1.51-win64/: readme.txt
mysql-5.1.57-win32/: readme.txt
mysql-5.1.57-winx64/: readme.txt
mysql-5.5.17-win32/: readme.txt
mysql-5.5.17-winx64/: readme.txt
mysql-5.6.23-win32/: readme.txt
mysql-5.6.23-winx64/: readme.txt
scripts/: fb2_clean.sh  fb2_flibusta.ps1  fb2_flibusta.sh  fb2_index.sh  fb2_merge.sh
src/inpxcreator/: Gopkg.toml  go.mod  go.sum
src/inpxcreator/cmd/libclean/: main.go
src/inpxcreator/cmd/libget2/: main.go  util.go
src/inpxcreator/cmd/libmerge/: main.go
src/inpxcreator/internal/zip/: writer.go
vstudio/vs10/: expat.vcxproj  lib2inpx.sln  lib2inpx.vcxproj  libget.fsproj  libsplit.vcxproj  zlibstat.vcxproj
vstudio/vs12/: expat.vcxproj  lib2inpx.sln  lib2inpx.vcxproj  libsplit.vcxproj  zlibstat.vcxproj
vstudio/vs90/: lib2inpx.sln  lib2inpx.vcproj
zlib-1.2.3/contrib/minizip/: iowin32.c  unzip.h  zip.h
zlib-1.2.3/contrib/vstudio/vc10/: zlibstat.vcxproj
zlib-1.2.3/contrib/vstudio/vc9/: zlibstat.vcproj
zlib-1.2.5/contrib/masmx64/: gvmat64.lst  inffasx64.lst
zlib-1.2.5/contrib/masmx86/: inffas32.lst  match686.lst
zlib-1.2.6/contrib/masmx64/: bld_ml64.bat  gvmat64.lst  inffasx64.lst
zlib-1.2.6/contrib/masmx86/: bld_ml32.bat  inffas32.lst  match686.lst
zlib-1.2.8/contrib/masmx64/: bld_ml64.bat
zlib-1.2.8/contrib/masmx86/: bld_ml32.bat
